--- a/css/style.css
+++ b/css/style.css
@@ -50,29 +50,58 @@ li {
 
 .header {
   max-width: 100%;
-  background: #7828B4;
-  height: 90px; }
+  background: #7828B4; }
+  .header .hearder-box {
+    width: 1200px;
+    margin: 0 auto; }
+    @media (max-width: 768px) {
+      .header .hearder-box {
+        width: 100%; } }
   .header .logo {
-    margin-left: 80px;
-    margin-right: 150px; }
+    padding: 30px 80px;
+    margin-right: 40px; }
     @media (max-width: 768px) {
       .header .logo {
-        margin-left: 40px; } }
+        padding: 30px 40px;
+        margin-right: 0; } }
+  .header .search-box {
+    max-width: 100%;
+    width: 100%; }
+    @media (max-width: 568px) {
+      .header .search-box {
+        height: 55px;
+        background: #EBEBEB; } }
   .header .search {
-    max-width: 380px;
-    border-bottom: #ffffff solid 1px;
-    padding: 4.5px; }
+    width: 100%;
+    padding: 0 4.5px;
+    border-bottom: #ffffff solid 1px; }
+    @media (max-width: 768px) {
+      .header .search {
+        margin: 0 80px; } }
+    @media (max-width: 568px) {
+      .header .search {
+        height: 30px;
+        margin: 0 40px;
+        background: #EBEBEB;
+        border-bottom: #000 solid 1px; } }
     .header .search a {
       color: #fff;
       font-size: 20px;
       margin-right: 20px; }
+      @media (max-width: 568px) {
+        .header .search a {
+          color: #000000; } }
     .header .search input {
+      width: 100%;
       outline: none;
       background: rgba(119, 40, 180, 0);
       border: none;
       font-family: Roboto;
       font-size: 20px;
       color: white; }
+      @media (max-width: 568px) {
+        .header .search input {
+          color: white; } }
       .header .search input::-webkit-input-placeholder {
         /* Chrome, Firefox, Opera, Safari 10.1+ */
         color: rgba(255, 255, 255, 0.5);
@@ -89,33 +118,61 @@ li {
         /* Chrome, Firefox, Opera, Safari 10.1+ */
         color: rgba(255, 255, 255, 0.5);
         font-style: italic; }
+        @media (max-width: 568px) {
+          .header .search input::-webkit-input-placeholder {
+            color: #9B9B9B; }
+          .header .search input:-ms-input-placeholder {
+            color: #9B9B9B; }
+          .header .search input::-ms-input-placeholder {
+            color: #9B9B9B; }
+          .header .search input::placeholder {
+            color: #9B9B9B; } }
       .header .search input:-ms-input-placeholder {
         /* Internet Explorer 10-11 */
         color: rgba(255, 255, 255, 0.5);
         font-style: italic; }
+        @media (max-width: 568px) {
+          .header .search input:-ms-input-placeholder {
+            color: #9B9B9B; } }
       .header .search input::-ms-input-placeholder {
         /* Microsoft Edge */
         color: rgba(255, 255, 255, 0.5);
         font-style: italic; }
+        @media (max-width: 568px) {
+          .header .search input::-ms-input-placeholder {
+            color: #9B9B9B; } }
 
 .section {
-  max-width: 1024px;
+  max-width: 1200px;
   margin: 0 auto; }
+  @media (max-width: 568px) {
+    .section h2 {
+      display: none; } }
 
-.sidebar {
-  width: 300px; }
-  .sidebar h3 {
-    font-size: 20px;
-    font-family: Roboto;
-    font-weight: bold; }
-  .sidebar hr {
-    margin: 0;
-    border: 1px solid #D7D7D7; }
+.sidebar h3 {
+  font-size: 20px;
+  font-family: Roboto;
+  font-weight: bold; }
+
+.sidebar hr {
+  margin: 0;
+  border: 1px solid #D7D7D7; }
+  @media (max-width: 568px) {
+    .sidebar hr {
+      border: none; } }
+
+@media (max-width: 568px) {
+  .sidebar .sidebar-border {
+    border-bottom: 1px solid #888888; } }
 
 .sidebar-location {
   width: 300px;
   padding: 24px 40px;
   background: #EBEBEB; }
+  @media (max-width: 568px) {
+    .sidebar-location {
+      width: 100%;
+      background: #D7D7D7; } }
   .sidebar-location select {
     height: 40px;
     margin-top: 15px;
@@ -124,8 +181,13 @@ li {
     color: #000000; }
 
 .sidebar-date {
+  width: 300px;
   padding: 24px 40px;
   background: #EBEBEB; }
+  @media (max-width: 568px) {
+    .sidebar-date {
+      width: 100%;
+      background: #D7D7D7; } }
   .sidebar-date h3 {
     margin-bottom: 24px; }
   .sidebar-date label {
@@ -141,8 +203,13 @@ li {
       width: 170px; }
 
 .sidebar-categories {
+  width: 300px;
   padding: 24px 40px;
   background: #EBEBEB; }
+  @media (max-width: 568px) {
+    .sidebar-categories {
+      width: 100%;
+      background: #D7D7D7; } }
   .sidebar-categories h3 {
     margin-bottom: 16px; }
   .sidebar-categories label {
@@ -174,6 +241,9 @@ li {
 .content {
   padding: 24px 42px;
   width: 100%; }
+  @media (max-width: 568px) {
+    .content {
+      padding: 24px 30px; } }
   .content h2 {
     font-family: Roboto Regular;
     font-size: 24px;
@@ -191,14 +261,12 @@ li {
   max-height: 100%; }
   .list li {
     max-width: 100%;
-    height: 220px;
     background: #FFFFFF;
     margin-bottom: 24px;
     -webkit-box-shadow: 2px 2px 10px rgba(125, 125, 125, 0.1);
     box-shadow: 2px 2px 10px rgba(125, 125, 125, 0.1); }
     @media (max-width: 768px) {
       .list li {
-        height: none;
         width: 100%; } }
     .list li:hover {
       -webkit-box-shadow: 2px 2px 10px rgba(125, 125, 125, 0.3);
@@ -212,12 +280,15 @@ li {
       background-size: auto 100%; }
       @media (max-width: 768px) {
         .list li .li-img {
-          max-height: 100%;
-          height: 100%;
           width: 100%;
           background-size: 100% auto; } }
+      @media (max-width: 568px) {
+        .list li .li-img {
+          background-size: auto 100%; } }
     .list li .li-content {
       padding: 24px 20px; }
+      .list li .li-content .d-flex {
+        margin-top: 10px; }
       .list li .li-content h3 {
         font-family: Roboto, Microsoft JhengHei;
         font-weight: bold;
@@ -254,3 +325,6 @@ li {
         font-size: 16px;
         color: #9B9B9B;
         margin-bottom: 0; }
+
+[v-clock] {
+  display: none; }
