--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,28 +1,28 @@
-
 @import "reset";
-
-@mixin desktop-below{
-    @media(max-width:1200px){
+@mixin desktop-below {
+    @media(max-width: 1200px) {
         @content
     }
 }
 
-@mixin pad{
-    @media(max-width:768px){
+@mixin pad {
+    @media(max-width: 768px) {
         @content
     }
 }
 
-@mixin iphone{
-    @media(max-width:568px){
+@mixin iphone {
+    @media(max-width: 568px) {
         @content
     }
 }
+
 @mixin moble480 {
-    @media(max-width:480px){
+    @media(max-width: 480px) {
         @content
     }
 }
+
 li {
     list-style-type: none;
 }
@@ -35,55 +35,100 @@ li {
 .header {
     max-width: 100%;
     background: #7828B4;
-    height: 90px;
+    .hearder-box {
+        width: 1200px;
+        margin: 0 auto;
+        @include pad() {
+            width: 100%;
+        }
+    }
     .logo {
-        margin-left: 80px;
-        margin-right: 150px;
-        @include pad(){
-        margin-left: 40px;
-        
+        padding: 30px 80px;
+        margin-right: 40px;
+        @include pad() {
+            padding: 30px 40px;
+            margin-right: 0;
+        }
+    }
+    .search-box {
+        max-width: 100%;
+        width: 100%;
+        @include iphone() {
+            height: 55px;
+            background: #EBEBEB;
         }
     }
     .search {
-        max-width: 380px;
+        width: 100%;
+        padding: 0 4.5px;
         border-bottom: #ffffff solid 1px;
-        padding: 4.5px;
+        @include pad() {
+            margin: 0 80px;
+        }
+        @include iphone() {
+            height: 30px;
+            margin: 0 40px;
+            background: #EBEBEB;
+            border-bottom: #000 solid 1px;
+        }
         a {
             color: #fff;
             font-size: 20px;
             margin-right: 20px;
+            @include iphone() {
+                color: #000000;
+            }
         }
         input {
+            width: 100%;
             outline: none;
             background: rgba(119, 40, 180, 0);
             border: none;
             font-family: Roboto;
             font-size: 20px;
             color: rgb(255, 255, 255);
+            @include iphone() {
+                color: rgb(255, 255, 255);
+            }
             &::placeholder {
                 /* Chrome, Firefox, Opera, Safari 10.1+ */
                 color: rgba(255, 255, 255, 0.50);
                 font-style: italic;
+                @include iphone() {
+                    color: #9B9B9B;
+                }
             }
             &:-ms-input-placeholder {
                 /* Internet Explorer 10-11 */
                 color: rgba(255, 255, 255, 0.50);
                 font-style: italic;
+                @include iphone() {
+                    color: #9B9B9B;
+                }
             }
             &::-ms-input-placeholder {
                 /* Microsoft Edge */
                 color: rgba(255, 255, 255, 0.50);
                 font-style: italic;
+                @include iphone() {
+                    color: #9B9B9B;
+                }
             }
         }
     }
 }
-.section{
-    max-width: 1024px;
+
+.section {
+    max-width: 1200px;
     margin: 0 auto;
+    h2 {
+        @include iphone() {
+            display: none;
+        }
+    }
 }
+
 .sidebar {
-    width: 300px;
     h3 {
         font-size: 20px;
         font-family: Roboto;
@@ -92,6 +137,15 @@ li {
     hr {
         margin: 0;
         border: 1px solid #D7D7D7;
+        @include iphone() {
+           border: none;
+        }
+    }
+    .sidebar-border{
+        @include iphone() {
+            border-bottom: 1px solid rgb(136, 136, 136); 
+         }
+        
     }
 }
 
@@ -99,6 +153,11 @@ li {
     width: 300px;
     padding: 24px 40px;
     background: #EBEBEB;
+    @include iphone() {
+        width: 100%;
+        background: #D7D7D7;
+        // box-shadow: 5px 5px 10px 30px #D7D7D7;
+    }
     select {
         // width: 220px;
         height: 40px;
@@ -110,8 +169,13 @@ li {
 }
 
 .sidebar-date {
+    width: 300px;
     padding: 24px 40px;
     background: #EBEBEB;
+    @include iphone() {
+        width: 100%;
+        background: #D7D7D7;
+    }
     h3 {
         margin-bottom: 24px;
     }
@@ -135,8 +199,13 @@ li {
 }
 
 .sidebar-categories {
+    width: 300px;
     padding: 24px 40px;
     background: #EBEBEB;
+    @include iphone() {
+        width: 100%;
+        background: #D7D7D7;
+    }
     h3 {
         margin-bottom: 16px;
     }
@@ -179,6 +248,9 @@ li {
 .content {
     padding: 24px 42px;
     width: 100%;
+    @include iphone() {
+        padding: 24px 30px;
+    }
     h2 {
         font-family: Roboto Regular;
         font-size: 24px;
@@ -199,12 +271,10 @@ li {
     max-height: 100%;
     li {
         max-width: 100%;
-        height: 220px;
         background: #FFFFFF;
         margin-bottom: 24px;
         box-shadow: 2px 2px 10px hsla(0, 0%, 49%, 0.1);
         @include pad() {
-            height: none;
             width: 100%;
         }
         &:hover {
@@ -218,15 +288,18 @@ li {
             background-position: center center;
             background-size: auto 100%;
             @include pad() {
-                max-height: 100%;
-                height: 100%;
                 width: 100%;
                 background-size: 100% auto;
+            }
+            @include iphone() {
+                background-size: auto 100%;
             }
         }
         .li-content {
             padding: 24px 20px;
-            
+            .d-flex {
+                margin-top: 10px;
+            }
             h3 {
                 font-family: Roboto, Microsoft JhengHei;
                 font-weight: bold;
@@ -247,10 +320,10 @@ li {
                     height: 45px;
                 }
             }
-            .li-data{
+            .li-data {
                 span {
                     margin-right: 7px;
-                    i{
+                    i {
                         font-size: 20px;
                     }
                 }
@@ -264,7 +337,7 @@ li {
             .li-Icon {
                 span {
                     margin-right: 7px;
-                    i{
+                    i {
                         font-size: 20px;
                     }
                 }
@@ -276,10 +349,9 @@ li {
                 }
             }
         }
-
     }
 }
 
-[v-clock]{
+[v-clock] {
     display: none;
 }
